--- a/lib/OMG.client/html/client/elemTargetView.jade
+++ b/lib/OMG.client/html/client/elemTargetView.jade
@@ -7,34 +7,12 @@ div(class='cssPrimitivesWrapper')
      each props in style
        each prop, key in props
          - if(selected.elem.styles[key])
+           span.cssType
+             = '@' + selected.elem.styles[key].primitive.value.type + primitive.value.type + ' '
+             if (typeof css.primitive.value.val === 'object')
            p= selected.elem.styles[key].primitive.value.type
          else
            p= key
-  div(id='propertySize', data-type='xy', class='cssPrimitives cssHelpers')
-    span.cssProperty Size
-    br
-    span.cssType #{'@[x,y] '}
-    span.cssSelectorXY
-      span.cssValueX
-        = selected.elem.styles.width.primitive.value.val
-      span #{' x '}
-      span.cssValueY
-        = selected.elem.styles.height.primitive.value.val
-  
-  div(id='propertyPosition', data-type='xyz', class='cssPrimitives cssHelpers')  
-    span.cssProperty Position
-    br
-    span.cssType #{'@[x,y] '}
-    span.cssSelectorXY
-      span.cssValueX
-        = parent.styles.left.primitive.value.val
-      span #{' x '}
-      span.cssValueY
-        = parent.styles.top.primitive.value.val
-    br
-    span.cssType #{'@[z] '}
-      span.cssValueZ
-        = parent.styles['z-index'].primitive.value.val
 
   div(id='propertyBackground', data-type='multi', class='cssPrimitives cssHelpers')
     span.cssProperty Background
